<resources>
    <string name="app_name">Glimpse</string>
    <string name="action_settings">Settings</string>
    <string name="usernametext">Username</string>
    <string name="passwordtext">Password</string>
    <string name="loginbuttontext">Login</string>
    <string name="title_activity_home_screen">home_screen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_newtabbed">newtabbed</string>
    <string name="swimming_pool">Swimming Pool</string>
    <string name="ish">Indoor Sports Hall</string>
    <string name="soccer_court">Street Soccer Court</string>
    <string name="meeting_room1">Meeting Room</string>
    <string name="pantry">Pantry</string>
    <string name="rock_climbing_wall">Rock Climbing Wall</string>
    <string name="space_bar">Space Bar</string>
    <string name="fitness_centre">Fitness Centre</string>
    <string name="Current_Capacity">0</string>
    <string name="Last_Updated_On">Last Updated At: </string>
    <string name="Opening_Hours">Opening Hours</string>
    <string name="to_be_filled"></string>
    <string name="Rates">Booking Rates</string>
    <string name="Locations">Location</string>
    <string name="Other_Facilities">Other Facilities</string>
    <string name="phonenumber">Phone Number</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="study">Study</string>
    <string name="food">Food</string>
    <string name="sports">Sports</string>
    <string name="glimpse">Glimpse</string>
    <string name="enter">Enter</string>
    <string name="clickanywhere">Tap anywhere to take a glimpse</string>
    <string name="ish1_id">2Lo3</string>
    <string name="ish2_id">2Lo3</string>
    <string name="wallClimb_id">2Lo3</string>
    <string name="gym_id">2Lo3</string>
    <string name="pantry_id">ZR5y</string>
    <string name="meetingRoom_id">Mb0T</string>
    <string name="pool_id">Y9l3</string>
    <string name="streetSoccer_id">Y9l3</string>
</resources>
