<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/bluelogo"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-110dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView12"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_above="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-8dp"
        android:layout_toStartOf="@+id/home"
        android:layout_toLeftOf="@id/home"
        android:gravity="top"
        android:text="@string/swimming_pool"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/home"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="-12dp"
        android:gravity="bottom"
        android:text="@string/swimming_pool"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="56dp"
        android:src="@drawable/smallhouse" />

    <ImageView
        android:id="@+id/mainpicture"
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/unlabelled_swimming_pool" />

    <ImageButton
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainpicture"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:id="@+id/swiperlayout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favourite"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/favourite"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/CurrentCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/CurrentCapacity"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="10dp"
                    android:text="@string/Current_Capacity"
                    android:textSize="16sp" />


                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="10dp"
                    android:layout_below="@+id/CurrentCapacity"
                    android:scaleY="3.0"
                    android:paddingBottom="8dp"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

                <TextView
                    android:id="@+id/FirebaseLastUpdated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="41dp"
                    android:layout_below="@+id/progressbar"
                    android:paddingLeft="10dp"
                    android:paddingBottom="40dp"
                    android:text="@string/Last_Updated_On"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/OpeningHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/FirebaseLastUpdated"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="65dp"
                    android:paddingTop="8dp"
                    android:text="@string/Opening_Hours"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/OpeningHours"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="97dp"
                    android:text="@string/to_be_filled"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Rates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/textView17"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="123dp"
                    android:text="@string/Rates"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/Rates"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="155dp"
                    android:text="@string/to_be_filled"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/textView19"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="181dp"
                    android:text="@string/Locations"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/Location"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="213dp"
                    android:text="@string/to_be_filled"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/otherFacilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/textView21"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="239dp"
                    android:text="@string/Other_Facilities"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/otherFacilities"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="271dp"
                    android:text="@string/to_be_filled"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_below="@id/textView23"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="298dp"
                    android:text="@string/to_be_filled"
                    android:textSize="18sp" />
            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
